--- a/src/css/main.css
+++ b/src/css/main.css
@@ -13,4 +13,11 @@
   box-sizing: border-box;
 }
 
+body {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /*# sourceMappingURL=main.css.map */
