--- a/src/sass/modules/_setup.scss
+++ b/src/sass/modules/_setup.scss
@@ -82,3 +82,10 @@ $very-dark-blue: hsl(198, 20%, 13%);
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
