--- a/src/sass/modules/_calculator-header.scss
+++ b/src/sass/modules/_calculator-header.scss
@@ -74,6 +74,16 @@ main.calc header{
   }
 
   .display {
-    
+    margin: 3rem 0;
+    padding: 4rem 3rem;
+
+    background-color: #0003;
+    border-radius: 1.4rem;
+
+    text-align: end;
+
+    span {
+      font-size: 5rem;
+    }
   }
 }
