--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,14 +3,29 @@
 /* Theme 3 */
 /* Initial Properties */
 :root {
-  font-family: "Spartan", Arial, Helvetica, sans-serif;
   font-size: 62.5%;
+}
+@media (min-width: 1800px) {
+  :root {
+    font-size: 67.5%;
+  }
+}
+@media (max-width: 1400px) {
+  :root {
+    font-size: 55%;
+  }
+}
+@media (max-width: 800px) {
+  :root {
+    font-size: 50%;
+  }
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Spartan", Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -18,6 +33,9 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+body main.calc {
+  margin: 0 2rem;
 }
 
 main.calc header .theme-selector {
@@ -84,6 +102,28 @@ main.calc header .display {
 }
 main.calc header .display span {
   font-size: 5rem;
+}
+
+main.calc .keypad {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  gap: 2.6rem;
+  padding: 2rem;
+  border-radius: 1.4rem;
+  background-color: #0003;
+}
+main.calc .keypad button {
+  font-size: 32px;
+  padding: 1.2rem;
+  border-radius: 0.6rem;
+  border: 0;
+}
+main.calc .keypad #reset-button {
+  grid-column: 1/3;
+}
+main.calc .keypad #equal-button {
+  grid-column: 3/5;
 }
 
 /*# sourceMappingURL=main.css.map */
