--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,5 +1,7 @@
 @import 'modules/setup';
 
+@import 'modules/themes.scss';
+
 @import 'modules/calculator-header';
 
 @import 'modules/calculator-keypad';
