--- a/src/sass/modules/_setup.scss
+++ b/src/sass/modules/_setup.scss
@@ -50,24 +50,24 @@ $very-dark-grayish-yellow: #35352c;
 
 // Background
 
-$very-dark-violet-main: hsl(268, 75%, 9%);
-$very-dark-violet-keypad: hsl(268, 71%, 12%);
+$very-dark-violet-main: #160628;
+$very-dark-violet-keypad: #1d0934;
 
 // Keys
 
-$dark-violet: hsl(281, 89%, 26%); // Key background
-$vivid-magenta: hsl(285, 91%, 52%); // Key shadow
+$dark-violet: #58077d; // Key background
+$vivid-magenta: #bc15f4; // Key shadow
 
-$pure-cyan: hsl(176, 100%, 44%); // Key background
-$soft-cyan : hsl(177, 92%, 70%); // Key shadow
+$pure-cyan: #00e0d1; // Key background
+$soft-cyan : #6cf9f2; // Key shadow
 
-$very-dark-violet-key:  hsl(268, 47%, 21%); // Key background
-$dark-magenta: hsl(290, 70%, 36%); // Key shadow
+$very-dark-violet-key:  #341c4f; // Key background
+$dark-magenta: #871c9c; // Key shadow
 
 // Text
 
-$light-yellow: hsl(52, 100%, 62%);
-$very-dark-blue: hsl(198, 20%, 13%);
+$light-yellow: #ffe53d;
+$very-dark-blue: #1b2428;
 // $white
 
 /* Initial Properties */
