--- a/src/css/main.css
+++ b/src/css/main.css
@@ -20,6 +20,11 @@
     font-size: 50%;
   }
 }
+@media (max-width: 700px) {
+  :root {
+    font-size: 47.5%;
+  }
+}
 
 * {
   margin: 0;
@@ -30,12 +35,10 @@
 
 body {
   height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 body main.calc {
-  margin: 0 2rem;
+  width: min(50rem, 95%);
+  margin: 8rem auto;
 }
 body .bold {
   transform: scale(1.3);
@@ -203,6 +206,9 @@ main.calc header .theme-selector .themes {
   display: flex;
   align-items: flex-end;
 }
+main.calc header .theme-selector .themes span {
+  font-size: 1.4rem;
+}
 main.calc header .theme-selector .themes > span {
   transform: translateY(-18%);
   margin-right: 1.6rem;
@@ -245,6 +251,7 @@ main.calc header .theme-selector .themes .changer > div .option {
   height: 100%;
 }
 main.calc header .display {
+  width: 100%;
   min-height: 15rem;
   font-size: 5rem;
   margin: 3rem 0;
@@ -254,7 +261,7 @@ main.calc header .display {
   text-align: end;
 }
 main.calc header .display #display-input {
-  width: 50rem;
+  width: 100%;
   font-size: 5rem;
   text-align: right;
   background: transparent;
@@ -271,10 +278,16 @@ main.calc .keypad {
   background-color: #0003;
 }
 main.calc .keypad button {
-  font-size: 32px;
+  font-size: 3.2rem;
   padding: 1.2rem 3.2rem;
   border-radius: 0.6rem;
   border: 0;
+}
+@media (max-width: 400px) {
+  main.calc .keypad button {
+    font-size: 2.8rem;
+    padding: 0.8rem 2.8rem;
+  }
 }
 main.calc .keypad .operation, main.calc .keypad .result {
   font-size: 18px;
