--- a/src/css/main.css
+++ b/src/css/main.css
@@ -35,11 +35,13 @@
 
 body {
   height: 100vh;
-  padding-top: 8rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 body main.calc {
   width: min(50rem, 95%);
-  margin: 0 auto;
+  margin: 0 1rem;
 }
 body .bold {
   transform: scale(1.3);
@@ -288,6 +290,12 @@ main.calc .keypad button {
   main.calc .keypad button {
     font-size: 2.8rem;
     padding: 0.8rem 2.8rem;
+  }
+}
+@media (max-width: 370px) {
+  main.calc .keypad button {
+    font-size: 2.4rem;
+    padding: 0.5rem 2.4rem;
   }
 }
 main.calc .keypad .operation, main.calc .keypad .result {
