--- a/src/sass/modules/_calculator-keypad.scss
+++ b/src/sass/modules/_calculator-keypad.scss
@@ -18,6 +18,11 @@ main.calc .keypad {
       font-size: 2.8rem;
       padding: .8rem 2.8rem;
     }
+
+    @media (max-width: 370px) {
+      font-size: 2.4rem;
+      padding: .5rem 2.4rem;
+    }
   }
 
   .operation, .result {
