--- a/src/sass/modules/_calculator-keypad.scss
+++ b/src/sass/modules/_calculator-keypad.scss
@@ -11,21 +11,12 @@ main.calc .keypad {
   button {
     font-size: 3.2rem;
     padding: 1.2rem 3.2rem;
-    border-radius: .6rem;
+    border-radius: 0.6rem;
     border: 0;
-
-    @media (max-width: 400px) {
-      font-size: 2.8rem;
-      padding: .8rem 2.8rem;
-    }
-
-    @media (max-width: 370px) {
-      font-size: 2.4rem;
-      padding: .5rem 2.4rem;
-    }
   }
 
-  .operation, .result {
+  .operation,
+  .result {
     font-size: 18px;
   }
 
@@ -35,5 +26,32 @@ main.calc .keypad {
 
   .equal-button {
     grid-column: 3 / 5;
+  }
+
+  @media (max-width: 400px) {
+    gap: 2.2rem;
+
+    button {
+      font-size: 2.8rem;
+      padding: 0.8rem 2.8rem;
+    }
+  }
+
+  @media (max-width: 370px) {
+    gap: 2rem;
+
+    button {
+      font-size: 2.4rem;
+      padding: 0.5rem 2.2rem;
+    }
+  }
+
+  @media (max-width: 330px) {
+    gap: 1.6rem;
+
+    button {
+      font-size: 2.2rem;
+      padding: 0.4rem 1.6rem;
+    }
   }
 }
